--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     ainejärjestösi hallitukselta lisää!
                 </p>
                 <p>Jos ainejärjestösi ei omista omaa lippukantaa, tai jäit ainejärjestölipunmyynnissä ilman
-                    lippua, ei huolta! Järjestämme ylijääneille lipuille yleisen lipunmyynnin 27.3. klo 12 alkaen,
+                    lippua, ei huolta! Järjestämme myös yleisen lipunmyynnin 27.3. klo 12 alkaen,
                     jatkuen niin pitkään kuin lippuja on jäljellä! Lipunmyynti tapahtuu Kide.app:ssa, jonka linkki
                     päivitetään tänne sivuille sekä tapahtumamme Instagramiin lähempänä!
                 </p>
