--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="col-lg-5 col-md-6 mx-auto vasen">
                 <h2 class="sininen-teksti">Lipunmyynti</h2>
-                <p>Jyväsmetron lippuja tullaan myymän tiettyjen ainejärjestöjen omissa lipunmyynneissä 20.3. -
+                <p>Jyväsmetron lippuja tullaan myymään tiettyjen ainejärjestöjen omissa lipunmyynneissä 20.3. -
                     24.3. Jokainen ainejärjestö tiedottaa omasta lipunmyynnistään hyvissä ajoin, joten voit kysyä
                     ainejärjestösi hallitukselta lisää!
                 </p>
@@ -131,7 +131,7 @@
                     jatkuen niin pitkään kuin lippuja on jäljellä! Lipunmyynti tapahtuu Kide.app:ssa, jonka linkki
                     päivitetään tänne sivuille sekä tapahtumamme Instagramiin lähempänä!
                 </p>
-                <p>Muistathan käydä vaihtamassa lippusi rannekkeeseen tapahtuman päivänä ennen alkua!
+                <p>Muistathan käydä vaihtamassa lippusi rannekkeeseen ennen tapahtuman alkua!
                     Rannekkeiden vaihtopiste ilmoitetaan myöhemmin.
                 </p>
             </div>
