--- a/laulut/index.html
+++ b/laulut/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="header" id="toc_header">
-    <img class="logo" src="/images/logo_transparent.png" width="300" height="500" alt="JM Logo" />
+    <img class="logo" src="/images/logo_transparent.png" alt="JM Logo" />
     <div class="topnav">
       <a href="/">Jyväsmetro</a>
       <a href="#laulutJaSisalto">Laulut</a>
