--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </nav>
 
 <header class="bg-primary text-white">
-    <video id="background-video" autoplay loop muted poster="">
+    <video id="background-video" playsinline autoplay loop muted poster="">
         <source src="images/jyvasmetro.mp4" type="video/mp4">
     </video>
     <div class="container">
