--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a class="nav-link js-scroll-trigger" href="#aikataulu">Aikataulu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#yhteistyokumppanit">Yhteistyökumppanit</a>
+                    <a class="nav-link js-scroll-trigger" href="#baarit">Yhteistyökumppanit</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/laulut">Laulut</a>
@@ -174,7 +174,7 @@
     </div>
 </section>
 
-<section id="yhteistyokumppanit" class="white-section">
+<section id="baarit" class="white-section">
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
