--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/styles.css?v=1.2" rel="stylesheet">
+    <link href="css/styles.css?v=1.3" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
@@ -91,7 +91,16 @@
                 <h1 class="blue-text">Jyväsmetro 2023</h1>
                 <br>
                 <p>Jyväsmetro palaa vanhaan loistoonsa 18.04.2023!</p>
-                <br>
+                <p>
+                    <a
+                        class="big-link"
+                        href="https://kide.app/events/2aacf4fd-1425-43da-ab49-b25bc8521390"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        Linkki lipunmyyntiin
+                    </a>
+                </p>
                 <p>Mukana olevista baareista, jatkoista, yhteistyökumppaneista ja lipunmyynnistä voit lukea lisää
                     alta!</p>
                 <br>
@@ -145,12 +154,23 @@
                     24.3. Jokainen ainejärjestö tiedottaa omasta lipunmyynnistään hyvissä ajoin, joten voit kysyä
                     ainejärjestösi hallitukselta lisää!
                 </p>
-                <p>Jos ainejärjestösi ei omista omaa lippukantaa, tai jäit ainejärjestölipunmyynnissä ilman
+                <p>
+                    Jos ainejärjestösi ei omista omaa lippukantaa, tai jäit ainejärjestölipunmyynnissä ilman
                     lippua, ei huolta! Järjestämme myös yleisen lipunmyynnin 27.3. klo 12 alkaen,
-                    jatkuen niin pitkään kuin lippuja on jäljellä! Lipunmyynti tapahtuu Kide.app:ssa, jonka linkki
-                    päivitetään tänne sivuille sekä tapahtumamme Instagramiin lähempänä!
+                    jatkuen niin pitkään kuin lippuja on jäljellä! Lipunmyynti tapahtuu Kide.app:ssa.
                 </p>
-                <p>Muistathan käydä vaihtamassa lippusi rannekkeeseen ennen tapahtuman alkua!
+                <p>
+                    <a
+                        class="big-link"
+                        href="https://kide.app/events/2aacf4fd-1425-43da-ab49-b25bc8521390"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        Linkki lipunmyyntiin
+                    </a>
+                </p>
+                <p>
+                    Muistathan käydä vaihtamassa lippusi rannekkeeseen ennen tapahtuman alkua!
                     Rannekkeiden vaihtopiste ilmoitetaan myöhemmin.
                 </p>
             </div>
@@ -189,6 +209,7 @@
                     <img src="images/sponsors/Muurmanni.jpg" class="companyLogo" alt="Muurmanni"/>
                     <img src="images/sponsors/Sherwood.jpg" class="companyLogo" alt="Sherwood"/>
                     <img src="images/sponsors/Unelma.jpg" class="companyLogo" alt="Unelma"/>
+                    <img src="images/sponsors/Oluttupa.png" class="companyLogo" alt="Oluttupa"/>
                 </div>
             </div>
         </div>
