Add link to telegram and new logo

--- a/index.html
+++ b/index.html
@@ -108,8 +108,14 @@
                         href="https://www.instagram.com/jyvasmetro/"
                         style="color: blue; font-weight: 600;"
                     >
-                    Instagramissa
+                        Instagramissa
+                    </a>, sekä liittymällä <a
+                        href="https://t.me/jyvasmetro2023"
+                        style="color: blue; font-weight: 600;"
+                    >
+                        Telegram-tiedotuskanavalle
                     </a>
+                </p>
                 <p>Tapahtumapäivänä järjestetään myös klassinen fiilis- ja haikukilpailu, joista tiedotetaan
                     tapahtumapäivänä tapahtuman Instagramissa.</p>
             </div>
@@ -210,6 +216,7 @@
                     <img src="images/sponsors/Sherwood.jpg" class="companyLogo" alt="Sherwood"/>
                     <img src="images/sponsors/Unelma.jpg" class="companyLogo" alt="Unelma"/>
                     <img src="images/sponsors/Oluttupa.png" class="companyLogo" alt="Oluttupa"/>
+                    <img src="images/sponsors/Paakonttori.png" class="companyLogo" alt="Paakonttori"/>
                 </div>
             </div>
         </div>
@@ -294,7 +301,7 @@
         <div id="somet">
             <a href="https://www.facebook.com/jyvasmetro/" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/jyvasmetro/" class="fa fa-instagram"></a>
-            <a href="https://t.me/jyväsmetro" class="fa fa-telegram"></a>
+            <a href="https://t.me/jyvasmetro2023" class="fa fa-telegram"></a>
         </div>
     </div>
     <!-- /.container -->
