--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
                         href="https://www.instagram.com/jyvasmetro/"
                         style="color: blue; font-weight: 600;"
                     >
-                        Instagramissa
-                    </a>, sekä liittymällä <a
+                        Instagramissa</a>, sekä liittymällä <a
                         href="https://t.me/jyvasmetro2023"
                         style="color: blue; font-weight: 600;"
                     >
