Add Meidakylabaari.png to sponsors

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                     <img src="images/sponsors/Unelma.jpg" class="companyLogo" alt="Unelma"/>
                     <img src="images/sponsors/Oluttupa.png" class="companyLogo" alt="Oluttupa"/>
                     <img src="images/sponsors/Paakonttori.png" class="companyLogo" alt="Paakonttori"/>
+                    <img src="images/sponsors/Meidankylabaari.png" class="companyLogo" alt="Meidankylabaari"/>
                 </div>
             </div>
         </div>
