Add new sponsor logos

--- a/index.html
+++ b/index.html
@@ -205,11 +205,14 @@
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
                 <h2 class="blue-text">Yhteistyökumppanit</h2>
                 <div class="imgcontainer">
+                    <img src="images/sponsors/Ceili.png" class="companyLogo" alt="Ceili"/>
+                    <img src="images/sponsors/Tek.png" class="companyLogo" alt="Tek"/>
+                    <img src="images/sponsors/Webso.png" class="companyLogo" alt="Webso"/>
                     <img src="images/sponsors/Escape.png" class="companyLogo" alt="Escape"/>
                     <img src="images/sponsors/Aalto.png" class="companyLogo" alt="Aalto"/>
-                    <img src="images/sponsors/Cheers.jpg" class="companyLogo" alt="Cheers"/>
                     <img src="images/sponsors/Hiisi.png" class="companyLogo" alt="Hiisi"/>
                     <img src="images/sponsors/Teerenpeli.jpg" class="companyLogo" alt="Teerenpeli"/>
+                    <img src="images/sponsors/Cheers.jpg" class="companyLogo" alt="Cheers"/>
                     <img src="images/sponsors/Kierre.png" class="companyLogo" alt="Kierre"/>
                     <img src="images/sponsors/Muurmanni.jpg" class="companyLogo" alt="Muurmanni"/>
                     <img src="images/sponsors/Sherwood.jpg" class="companyLogo" alt="Sherwood"/>
