--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
                 <h2 class="blue-text">Yhteistyökumppanit</h2>
                 <div class="imgcontainer">
+                    <img src="images/sponsors/Huld.png" class="companyLogo" alt="Huld"/>
                     <img src="images/sponsors/Ceili.png" class="companyLogo" alt="Ceili"/>
                     <img src="images/sponsors/Tek.png" class="companyLogo" alt="Tek"/>
                     <img src="images/sponsors/Webso.png" class="companyLogo" alt="Webso"/>
@@ -220,6 +221,7 @@
                     <img src="images/sponsors/Oluttupa.png" class="companyLogo" alt="Oluttupa"/>
                     <img src="images/sponsors/Paakonttori.png" class="companyLogo" alt="Paakonttori"/>
                     <img src="images/sponsors/Meidankylabaari.png" class="companyLogo" alt="Meidankylabaari"/>
+                    <img src="images/sponsors/Melbourne.png" class="companyLogo" alt="Melbourne"/>
                 </div>
             </div>
         </div>
