--- a/laulut/index.html
+++ b/laulut/index.html
@@ -47,6 +47,9 @@
         <li><a href="#laulu22">Saku Sammakko</a></li>
         <li><a href="#laulu23">Africa - Toto</a></li>
         <li><a href="#laulu24">Matkaan lähden</a></li>
+        <li><a href="#laulu25">Joutsenvaunu</a></li>
+        <li><a href="#laulu26">Metropäivä</a></li>
+        <li><a href="#laulu27">Vapun takii</a></li>
       </ol>
     </div>
 
@@ -737,6 +740,148 @@
             Matkaan lähden<br />
             Matkaan lähden<br />
             Matkaan lähden Mulla metrolippu on
+          </p>
+        </li>
+
+        <li>
+          <h3 id="laulu25">Joutsenvaunu</h3>
+          <h5>(Styrol sivu 123)</h5>
+          <p>
+            Taas Linkin sisälla nään<br />
+            ikkunan takaa leikkivän leikkejään<br />
+            ne siihen paikalleensa kattilaan jää,<br />
+            siihen kattilaan jää
+          </p>
+          <p>
+            Lennat metrossa taas<br />
+            et tätä hetkeä sä tuu unohtaa<br />
+            tää joutsenvaunu etsii taas juottolaa,<br />
+            etsii taas juottolaa
+          </p>
+          <p>
+            Tuo metro agoralta keskustaan<br />
+            huurteinen huulet kostuttaa<br />
+            saa toiset uskomaan kai humalaan,<br />
+            toiset krapulaan tai mihin vaan<br />
+            muttei kuitenkaan tähän maailmaan
+          </p>
+          <p>
+            Humanistin sä näät<br />
+            on turha vrittää sä rannalle jäät<br />
+            pakit ja pilsneri sut saa itkemään,<br />
+            sut saa itkemään
+          </p>
+          <p>
+            Tahtoisin olla nin kuin silloinkin<br />
+            kun peityin nousuhumalaan<br />
+            se jäänyt on jo kännin jalkoihin niin kuin sinäkin
+          </p>
+          <p>
+            Huomenna lähempänä kuolemaa<br />
+            aamuinen ankeus ahdistaa<br />
+            tuo morkkis laulun tämän kirjoittaa<br />
+            tuo morkkis kiinni saa kenet vaaaaaaan<br />
+            huominen kiinni saa kenet vain haluaaaaaaa
+          </p>
+        </li>
+
+        <li>
+          <h3 id="laulu26">Metropäivä</h3>
+          <h5>(Styrol sivu 102)</h5>
+          <p>
+            On tänään metropäivä,<br />
+            ei huolesta häivä.<br />
+            On tänään metropäivä<br />
+            ja onnellinen oon.
+          </p>
+          <p>
+            En iloisempi koskaan,<br />
+            en koskaan en koskaan,<br />
+            en iloisempi koskaan<br />
+            kuin vappuna mä oo!
+          </p>
+          <p>
+            Jos joskus murhe painaa,<br />
+            se painaa, se painaa,<br />
+            voi tunnelia kaivaa<br />
+            Jyväsmetrolle.
+          </p>
+          <p>
+            On tänään metropäivä...
+          </p>
+          <p>
+            Muista ystävää<br />
+            tuopillisella<br />
+            Voit toisen yllättää!
+          </p>
+        </li>
+        <li>
+          <h3 id="laulu27">Vapun takii</h3>
+          <h5>(Styrol sivu 102)</h5>
+          <p>
+            Tosi kiva maksaa simat, colat, pitsat, kaljat, puurot, nuudelit,<br />
+            struudelit, kelat, etkot, metrot, ketkot, jatkot ja jatkojen jatkot
+          </p>
+          <p>
+            Metros on vaan oikeesti ihan pimmeetä<br />
+            Koitapa ite irkata kaiken keskellää
+          </p>
+          <p>
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa<br />
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa
+          </p>
+          <p>
+            Joten ylös ja Metroon Vapun taki<br />
+            Taas mennään Vapun takil<br />
+            Meininki Jeba - seittemän kautta vis
+          </p>
+          <p>
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa<br />
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa
+          </p>
+          <p>
+            Taas mennään Vapun takii. Ei Linkin vaan vapun takii.
+          </p>
+          <p>
+            On saatava fukseille haalarii - kun vaput on märkii ja sotkusii.<br />
+            Taas mennään Vapun takii. Mä matkustan metros Vapun takii.<br />
+            Et pääsisin jousille kaikkien kanssa<br />
+            ja takapenkillä irkattaisin
+          </p>
+          <p>
+            Metros on vaan oikeesti ihan pimmeetä<br />
+            Koitapa ite irkata kaiken keskellää
+          </p>
+          <p>
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa<br />
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa
+          </p>
+          <p>
+            Joten ylös ja Metroon Vapun takii<br />
+            Taas mennään Vapun takii<br />
+            Meininki Jeba - seittemän kautta viis
+          </p>
+          <p>
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa<br />
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa
+          </p>
+          <p>
+            Tosi kiva maksaa Sherwood, Siro, Kuokkala, Kierre, Palokka, Pasuuna,<br />
+            etkot, metrot, ketkot, jatkot, jatkojen jatkot
+          </p>
+          <p>
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa<br />
+            Oi oi oi oioi - Metro syöksee tulta <br />
+            Mul on VIPPI-lippu - Se on ihan kultaa
           </p>
         </li>
       </ol>
