--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                     <img src="images/sponsors/Ceili.png" class="companyLogo" alt="Ceili"/>
                     <img src="images/sponsors/Tek.png" class="companyLogo" alt="Tek"/>
                     <img src="images/sponsors/Webso.png" class="companyLogo" alt="Webso"/>
+                    <img src="images/sponsors/Ticketless.svg" class="companyLogo" alt="Ticketless"/>
                     <img src="images/sponsors/Escape.png" class="companyLogo" alt="Escape"/>
                     <img src="images/sponsors/Aalto.png" class="companyLogo" alt="Aalto"/>
                     <img src="images/sponsors/Hiisi.png" class="companyLogo" alt="Hiisi"/>
