--- a/index.html
+++ b/index.html
@@ -188,11 +188,14 @@
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto text-align-center">
                 <h2 class="orange-text">Tapahtuman aikataulu</h2>
-                <h3><i>Tulossa</i></h3>
+                <img src="images/Aikataulu.JPG" alt=""/>
             </div>
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                <figure class="filter filter-orange">
+                <figure class="filter filter-blue">
                     <img class="event-image" src="images/2022-02.jpg" alt=""/>
+                </figure>
+                <figure class="filter filter-orange">
+                    <img class="event-image" src="images/2022-04.jpg" alt=""/>
                 </figure>
             </div>
         </div>
