--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
             crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/styles.css?v=1.4" rel="stylesheet">
+    <link href="css/styles.css?v=1.5" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 
@@ -97,6 +100,7 @@
                         href="https://kide.app/events/2aacf4fd-1425-43da-ab49-b25bc8521390"
                         target="_blank"
                         rel="noopener noreferrer"
+                        style="color: dodgerblue; font-weight: 600;"
                     >
                         Linkki lipunmyyntiin
                     </a>
@@ -106,11 +110,11 @@
                 <br>
                 <p>Pysy perillä kaikesta Metroon liittyvästä seuraamalla Jyväsmetroa <a
                         href="https://www.instagram.com/jyvasmetro/"
-                        style="color: blue; font-weight: 600;"
+                        style="color: dodgerblue; font-weight: 600;"
                     >
                         Instagramissa</a>, sekä liittymällä <a
                         href="https://t.me/jyvasmetro2023"
-                        style="color: blue; font-weight: 600;"
+                        style="color: dodgerblue; font-weight: 600;"
                     >
                         Telegram-tiedotuskanavalle
                     </a>
@@ -170,6 +174,7 @@
                         href="https://kide.app/events/2aacf4fd-1425-43da-ab49-b25bc8521390"
                         target="_blank"
                         rel="noopener noreferrer"
+                        style="color: dodgerblue; font-weight: 600;"
                     >
                         Linkki lipunmyyntiin
                     </a>
@@ -206,7 +211,7 @@
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
-                <h2 class="blue-text">Yhteistyökumppanit</h2>
+                <h2 class="blue-text">Yhteistyö&shy;kumppanit</h2>
                 <div class="imgcontainer">
                     <img src="images/sponsors/Huld.png" class="companyLogo" alt="Huld"/>
                     <img src="images/sponsors/Ceili.png" class="companyLogo" alt="Ceili"/>
@@ -304,7 +309,7 @@
 <!-- instagram embed ends -->
 
 <!-- Footer -->
-<footer class="py-5 bg-dark">
+<footer class="py-5 bg-dark footer">
     <div class="container">
         <p class="m-0 text-center text-white">&copy; Linkki Jyväskylä ry</p>
         <div id="somet">
