Add a paragraph about the start of the event

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                 <p>Busseissa matkustusmukavuudesta ja huipputunnelman ylläpitämisestä vastaavat osaavat ja mukavat
                     matkanjohtajat. Jyväsmetro on myös poikkitieteellinen tapahtuma, joten pääset myös tutustumaan ja
                     pitämään hauskaa muiden ainejärjestöjen opiskelijoiden kanssa!</p>
+                <p>Metrolinjat lähtevät liikkeelle Agoralta (Mattilanniemi 2, 40100 Jyväskylä). Lähtöpaikalla ja Agoran takana on
+                    lipunvaihtopiste, jossa voit vaihtaa lippusi rannekkeeseen, sekä Metropiknik, jossa voit nauttia
+                    hyvästä seurasta ja metrotunnelmasta jo ennen tapahtuman alkua!</p>
             </div>
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
                 <figure class="filter filter-orange">
@@ -180,7 +183,7 @@
                 </p>
                 <p>
                     Muistathan käydä vaihtamassa lippusi rannekkeeseen ennen tapahtuman alkua!
-                    Rannekkeiden vaihtopiste ilmoitetaan myöhemmin.
+                    Rannekkeiden ennakkovaihtopiste ilmoitetaan myöhemmin.
                 </p>
             </div>
         </div>
