Add info for ticket excange, modify structure, hide info about ticket sales

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/styles.css?v=1.5" rel="stylesheet">
+    <link href="css/styles.css?v=1.6" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
                     <a class="nav-link js-scroll-trigger" href="#mita">Mitä?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#lipunmyynti">Lipunmyynti</a>
+                    <a class="nav-link js-scroll-trigger" href="#lipunmyynti_vaihto_info">Lipunvaihto ja info</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#aikataulu">Aikataulu</a>
@@ -138,9 +138,6 @@
                 <p>Busseissa matkustusmukavuudesta ja huipputunnelman ylläpitämisestä vastaavat osaavat ja mukavat
                     matkanjohtajat. Jyväsmetro on myös poikkitieteellinen tapahtuma, joten pääset myös tutustumaan ja
                     pitämään hauskaa muiden ainejärjestöjen opiskelijoiden kanssa!</p>
-                <p>Metrolinjat lähtevät liikkeelle Agoralta (Mattilanniemi 2, 40100 Jyväskylä). Lähtöpaikalla ja Agoran takana on
-                    lipunvaihtopiste, jossa voit vaihtaa lippusi rannekkeeseen, sekä Metropiknik, jossa voit nauttia
-                    hyvästä seurasta ja metrotunnelmasta jo ennen tapahtuman alkua!</p>
             </div>
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
                 <figure class="filter filter-orange">
@@ -151,7 +148,7 @@
     </div>
 </section>
 
-<section id="lipunmyynti" class="white-section">
+<section id="lipunmyynti_vaihto_info" class="white-section">
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
@@ -159,7 +156,7 @@
                     <img class="event-image" src="images/2022-01.jpg" alt=""/>
                 </figure>
             </div>
-            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
+            <div class="col-lg-6 col-md-6 mx-auto text-align-center" hidden>
                 <h2 class="blue-text">Lipunmyynti</h2>
                 <p>Jyväsmetron lippuja tullaan myymään tiettyjen ainejärjestöjen omissa lipunmyynneissä 20.3. -
                     24.3. Jokainen ainejärjestö tiedottaa omasta lipunmyynnistään hyvissä ajoin, joten voit kysyä
@@ -181,9 +178,23 @@
                         Linkki lipunmyyntiin
                     </a>
                 </p>
+            </div>
+            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
+                <h2 class="blue-text">Lipunvaihto ja info</h2>
+                <p>Metrolinjat lähtevät liikkeelle Agoralta (Mattilanniemi 2, 40100 Jyväskylä). Lähtöpaikan vieressä Agoran takana on
+                    lipunvaihtopiste, jossa voit vaihtaa lippusi rannekkeeseen, sekä Metropiknik, jossa voit nauttia
+                    hyvästä seurasta ja metrotunnelmasta jo ennen tapahtuman alkua!</p>
                 <p>
                     Muistathan käydä vaihtamassa lippusi rannekkeeseen ennen tapahtuman alkua!
-                    Rannekkeiden ennakkovaihtopiste ilmoitetaan myöhemmin.
+                </p>
+                <h3 class="blue-text">
+                    Lipunvaihtopisteet:
+                </h3>
+                <p>
+                    Maanantai 17.4. klo. 12:00-18:00 Agora, Linkin opiskelijatila Kattila (AG B437)
+                </p>
+                <p>
+                    Tiistai 18.4. klo. 09:00-11:00 Agora, Linkin opiskelijatila Kattila (AG B437), sekä klo. 13:00-15:00 Agoran takapiha.
                 </p>
             </div>
         </div>
