Minor changes to text

--- a/index.html
+++ b/index.html
@@ -185,7 +185,15 @@
                     lipunvaihtopiste, jossa voit vaihtaa lippusi rannekkeeseen, sekä Metropiknik, jossa voit nauttia
                     hyvästä seurasta ja metrotunnelmasta jo ennen tapahtuman alkua!</p>
                 <p>
-                    Muistathan käydä vaihtamassa lippusi rannekkeeseen ennen tapahtuman alkua!
+                    Suosittelemme vaihtamaan liput jo maanantaina suurimman ruuhkan välttämiseksi.
+                </p>
+                <p>
+                    Jos et itse pääse vaihtamaan lippuasi lipunvaihtopisteiltä, voit pyytää kaveriasi vaihtamaan sen, 
+                    tai voit sopia asiasta linjasi matkanjohtajan kanssa.
+                </p>
+                <p>
+                    Tapahtumaan osallistujat saavat viikonlopun aikana sähköpostiviestin, jossa on linkki linjan omaan telegramryhmään, 
+                    sekä yleiseen telegram-tiedotuskanavaan. Linjan omasta ryhmästä tavoitat myös linjasi matkanjohtajan.
                 </p>
                 <h3 class="blue-text">
                     Lipunvaihtopisteet:
