Minor changes to structure of a section

--- a/index.html
+++ b/index.html
@@ -183,13 +183,7 @@
                 <h2 class="blue-text">Lipunvaihto ja info</h2>
                 <p>Metrolinjat lähtevät liikkeelle Agoralta (Mattilanniemi 2, 40100 Jyväskylä). Lähtöpaikan vieressä Agoran takana on
                     lipunvaihtopiste, jossa voit vaihtaa lippusi rannekkeeseen, sekä Metropiknik, jossa voit nauttia
-                    hyvästä seurasta ja metrotunnelmasta jo ennen tapahtuman alkua!</p>
-                <p>
-                    Suosittelemme vaihtamaan liput jo maanantaina suurimman ruuhkan välttämiseksi.
-                </p>
-                <p>
-                    Jos et itse pääse vaihtamaan lippuasi lipunvaihtopisteiltä, voit pyytää kaveriasi vaihtamaan sen, 
-                    tai voit sopia asiasta linjasi matkanjohtajan kanssa.
+                    hyvästä seurasta ja metrotunnelmasta jo ennen tapahtuman alkua!
                 </p>
                 <p>
                     Tapahtumaan osallistujat saavat viikonlopun aikana sähköpostiviestin, jossa on linkki linjan omaan telegramryhmään, 
@@ -203,6 +197,13 @@
                 </p>
                 <p>
                     Tiistai 18.4. klo. 09:00-11:00 Agora, Linkin opiskelijatila Kattila (AG B437), sekä klo. 13:00-15:00 Agoran takapiha.
+                </p>
+                <p>
+                    Suosittelemme vaihtamaan liput jo maanantaina suurimman ruuhkan välttämiseksi.
+                </p>
+                <p>
+                    Jos et itse pääse vaihtamaan lippuasi lipunvaihtopisteiltä, voit pyytää kaveriasi vaihtamaan sen, 
+                    tai voit sopia asiasta linjasi matkanjohtajan kanssa.
                 </p>
             </div>
         </div>
