--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
                     hyvästä seurasta ja metrotunnelmasta jo ennen tapahtuman alkua!
                 </p>
                 <p>
-                    Tapahtumaan osallistujat saavat viikonlopun aikana sähköpostiviestin, jossa on linkki linjan omaan telegramryhmään, 
+                    Tapahtumaan osallistujat saavat tapahtumaa edeltävän viikonlopun aikana sähköpostiviestin, jossa on linkki linjan omaan telegramryhmään, 
                     sekä yleiseen telegram-tiedotuskanavaan. Linjan omasta ryhmästä tavoitat myös linjasi matkanjohtajan.
                 </p>
                 <h3 class="blue-text">
-                    Lipunvaihtopisteet:
+                    Lipunvaihto&shy;pisteet:
                 </h3>
                 <p>
                     Maanantai 17.4. klo. 12:00-18:00 Agora, Linkin opiskelijatila Kattila (AG B437)
