--- a/laulut/index.html
+++ b/laulut/index.html
@@ -47,9 +47,9 @@
         <li><a href="#laulu22">Saku Sammakko</a></li>
         <li><a href="#laulu23">Africa - Toto</a></li>
         <li><a href="#laulu24">Matkaan lähden</a></li>
-        <li><a href="#laulu25">Joutsenvaunu</a></li>
-        <li><a href="#laulu26">Metropäivä</a></li>
-        <li><a href="#laulu27">Vapun takii</a></li>
+        <li><a href="#laulu25">Joutsenvaunu (Joutsenlaulu)</a></li>
+        <li><a href="#laulu26">Metropäivä (Onnenpäivä)</a></li>
+        <li><a href="#laulu27">Vapun takii (Rahan takii)</a></li>
       </ol>
     </div>
 
@@ -744,7 +744,7 @@
         </li>
 
         <li>
-          <h3 id="laulu25">Joutsenvaunu</h3>
+          <h3 id="laulu25">Joutsenvaunu (Joutsenlaulu)</h3>
           <h5>(Styrol sivu 123)</h5>
           <p>
             Taas Linkin sisälla nään<br />
@@ -786,7 +786,7 @@
         </li>
 
         <li>
-          <h3 id="laulu26">Metropäivä</h3>
+          <h3 id="laulu26">Metropäivä (Onnenpäivä)</h3>
           <h5>(Styrol sivu 102)</h5>
           <p>
             On tänään metropäivä,<br />
@@ -816,7 +816,7 @@
           </p>
         </li>
         <li>
-          <h3 id="laulu27">Vapun takii</h3>
+          <h3 id="laulu27">Vapun takii (Rahan takii)</h3>
           <h5>(Styrol sivu 102)</h5>
           <p>
             Tosi kiva maksaa simat, colat, pitsat, kaljat, puurot, nuudelit,<br />
