Hide sections after event end

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
                 <h1 class="blue-text">Jyväsmetro 2023</h1>
                 <br>
+                <h4>Jyväsmetro on päättynyt - kiitos osallistujille ja yhteistyökumppaneille!</h4>
+                <h4>Jyväsmetro palaa taas ensi vuonna!</h4>
+            </div>
+            <div class="col-lg-8 col-md-6 col-sm 4 mx-auto" hidden>
+                <h1 class="blue-text">Jyväsmetro 2023</h1>
+                <br>
                 <p>Jyväsmetro palaa vanhaan loistoonsa 18.04.2023!</p>
                 <p>
                     <a
@@ -155,7 +161,7 @@
     </div>
 </section>
 
-<section id="lipunmyynti_vaihto_info" class="white-section">
+<section id="lipunmyynti_vaihto_info" class="white-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
@@ -217,7 +223,7 @@
     </div>
 </section>
 
-<section id="aikataulu" class="grey-section">
+<section id="aikataulu" class="grey-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto text-align-center">
