Add first changes from 2024

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#mita">Mitä?</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#lipunmyynti_vaihto_info">Lipunvaihto ja info</a>
-                </li>
-                <li class="nav-item">
+		</li>-->
+                <!--<li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#aikataulu">Aikataulu</a>
-                </li>
+		</li>-->
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#baarit">Yhteistyökumppanit</a>
                 </li>
@@ -90,7 +90,12 @@
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
-                <h1 class="blue-text">Jyväsmetro 2023</h1>
+                <h1 class="blue-text">Jyväsmetro 2024</h1>
+                <br>
+                <h4>Coming soon... Seuraa <a href="https://www.instagram.com/jyvasmetro">Instassa</a> pysyäksesi matkassa mukana!</h4>
+            </div>
+            <div class="col-lg-8 col-md-6 col-sm 4 mx-auto" hidden>
+                <h1 class="blue-text">Jyväsmetro 2024</h1>
                 <br>
                 <p>Jyväsmetro palaa vanhaan loistoonsa 18.04.2023!</p>
                 <p>
@@ -139,8 +144,8 @@
                 <h2 class="orange-text">Mitä?</h2>
                 <p>Tapahtuman konseptina on kiertää busseilla Jyväskylän lähialueen anniskeluravintoloita rennossa
                     hengessä ja nauttia hyvästä poikkitieteellisestä seurasta.</p>
-                <p>Tänä vuonna 2023 kierrämme baareja muunmuassa keskustassa, Kortepohjassa, Muuramessa, Keljossa ja
-                    Kuokkalassa. Jatkot järjestetään illan päätteeksi keskustassa Escapessa, jonne osallistujilla on
+                <p>Vuonna 2023 kiersimme baareja muunmuassa keskustassa, Kortepohjassa, Muuramessa, Keljossa ja
+                    Kuokkalassa. Jatkot järjestettiin illan päätteeksi keskustassa Escapessa, jonne osallistujilla oli
                     ilmainen sisäänpääsy tapahtumarannekkeella.</p>
                 <p>Busseissa matkustusmukavuudesta ja huipputunnelman ylläpitämisestä vastaavat osaavat ja mukavat
                     matkanjohtajat. Jyväsmetro on myös poikkitieteellinen tapahtuma, joten pääset myös tutustumaan ja
@@ -155,7 +160,7 @@
     </div>
 </section>
 
-<section id="lipunmyynti_vaihto_info" class="white-section">
+<section id="lipunmyynti_vaihto_info" class="white-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
@@ -217,7 +222,7 @@
     </div>
 </section>
 
-<section id="aikataulu" class="grey-section">
+<section id="aikataulu" class="grey-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto text-align-center">
@@ -240,7 +245,7 @@
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
-                <h2 class="blue-text">Yhteistyö&shy;kumppanit</h2>
+                <h2 class="blue-text">Yhteistyö&shy;kumppanit 2023</h2>
                 <div class="imgcontainer">
                     <img src="images/sponsors/Huld.png" class="companyLogo" alt="Huld"/>
                     <img src="images/sponsors/Ceili.png" class="companyLogo" alt="Ceili"/>
@@ -344,7 +349,7 @@
         <div id="somet">
             <a href="https://www.facebook.com/jyvasmetro/" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/jyvasmetro/" class="fa fa-instagram"></a>
-            <a href="https://t.me/jyvasmetro2023" class="fa fa-telegram"></a>
+	    <!--<a href="https://t.me/jyvasmetro2023" class="fa fa-telegram"></a>-->
         </div>
     </div>
     <!-- /.container -->
@@ -363,7 +368,7 @@
 <!-- countdown JS-->
 <script>
   // Set the date we're counting down to
-  var countDownDate = new Date("April 18, 2023 16:00:00").getTime();
+  var countDownDate = new Date("April 25, 2024 16:00:00").getTime();
 
   // Update the countdown every 1 second
   var x = setInterval(function () {
