--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <a class="nav-link js-scroll-trigger" href="#info">jyväsmetro</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#matkanjohtajahaku">Matkanjohtajaksi?</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#mita">Mitä?</a>
                 </li>
                 <!--<li class="nav-item">
@@ -78,15 +81,16 @@
         <source src="images/jyvasmetro.mp4" type="video/mp4">
     </video>
     <div class="container">
-        <div class="col-lg-7 col-md-6 mx-auto">
+        <div class="col-lg-7 col-md-6 mx-auto logo-container">
             <img src="images/logo_transparent.png" alt="metro"/>
+            <div class="overlay-text">25.4.2024</div>
         </div>
     </div>
 </header>
 <div id="countdown">
 </div>
 
-<section id="info" class="white-section">
+<section id="info" class="grey-section">
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
@@ -132,6 +136,24 @@
                 </p>
                 <p>Tapahtumapäivänä järjestetään myös klassinen fiilis- ja haikukilpailu, joista tiedotetaan
                     tapahtumapäivänä tapahtuman Instagramissa.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="matkanjohtajahaku" class="white-section">
+    <div class="container">
+        <div class="row row-custom">
+            <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
+                <figure class="filter filter-blue">
+                    <img class="event-image" src="images/2022-04.jpg" alt=""/>
+                </figure>
+            </div>
+            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
+                <h2 class="orange-text">Matkanjohtajaksi?</h2>
+                <p>Jyväsmetro on historiansa suurin vuonna 2024, joten tarvitsemme entistä enemmän matkanjohtajia huolehtimaan metrolinjojen tunnelmasta. Jos siis haluat ikioman metrolinjan josta voit tehdä oman näköisesi, jätä hakemus matkanjohtajatiimiin alla.</p>
+                <p>Matkanjohtajat saavat työstään myös hienoja etuja, kuten ilmaisen pääsyn tapahtumaan, pääsyn jatkoille jonon ohi sekä drinkkilippuja. Järjestäminen näyttää myös hyvältä CV:ssä, sekä saat hienon Jyväsmetro-paidan!</p>
+                <p><a href="/matkanjohtajahaku">Hae matkanjohtajaksi tästä</a></p>
             </div>
         </div>
     </div>
